1. fix small problem with description modal window form header (on some screens was clipped) 2. fix img for subpage articles, image is now resposible when user is changing browser's window size

--- a/src/style/components/description_modal_window.scss
+++ b/src/style/components/description_modal_window.scss
@@ -53,6 +53,9 @@
 	height: 0%;
 	transition: height .6s ease-in-out;
 	overflow: hidden;
+	& > h2.contact_form_header {
+		margin-top: 3rem;
+	}
 }
 
 @media (min-width: 37.71rem) {
